Revert "Fix mobile layout issues"

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -1726,7 +1726,6 @@ symbol.icon:not(.icon--full-color) .icon-error__symbol {
   fill: #ffffff;
 }
 
-/*================ Error Icons ================*/
 /*================ Payment Icons ================*/
 .payment-icons {
   -moz-user-select: none;
@@ -2605,7 +2604,6 @@ textarea {
 
 .site-nav {
   text-align: right;
-  padding-right: 45px;
 }
 /*================ Site Nav Links ================*/
 .site-nav__link.site-nav--active-dropdown {
@@ -5000,12 +4998,6 @@ hr {
   }
 }
 
-@media screen and (max-width: 749px) {
-  .icon__text {
-    display: none;
-  }
-}
-
 .site-header__icons-wrapper {
   position: relative;
   display: -webkit-flex;
@@ -5044,12 +5036,6 @@ hr {
 
 .site-header__search-toggle {
   display: block;
-}
-
-@media screen and (min-width: 750px) {
-  .site-header__search-toggle--mobile {
-    display: none;
-  }
 }
 
 @media only screen and (min-width: 750px) {
